[project]
name = "maneuvergpt"
version = "1.0.0"
description = "ManeuverGPT Agentic Control for Safe Autonomous Stunt Maneuvers"
readme = "README.md"
authors = [
    { name = "SHi-ON", email = "shawn@azdam.ai" },
    { name = "pranavreddy23", email = "pranavreddy2327@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "carla",
    "pygame",
    "redis",
    "pydantic",
    "openai",
    "crewai",
    "tqdm",
]
