[project]
name = "maneuvergpt"
version = "1.1.0"
description = "ManeuverGPT Agentic Control for Safe Autonomous Stunt Maneuvers"
readme = "README.md"
authors = [
    { name = "SHi-ON", email = "shawn@azdam.ai" },
    { name = "pranavreddy23", email = "pranavreddy2327@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "carla",
    "pygame",
    "redis",
    "pydantic",
    "openai",
    "crewai",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    'ruff',
]

[tool.ruff]
target-version = 'py313'
line-length = 79

[tool.ruff.lint]
select = ['E', 'F', 'I']
ignore = []

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
line-ending = 'lf'
